fix: popover z-index

--- a/popover/popover.component.scss
+++ b/popover/popover.component.scss
@@ -3,7 +3,7 @@
 
 :host {
     position: absolute;
-    z-index: 105;
+    z-index: 250;
     user-select: text;
     padding: 0;
     display: none;
